--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1602,7 +1602,7 @@
         <item>This will happen in the days to come:</item>
         <item>This will take place in the days to come:</item>
         <item>This will happen to you:</item>
-        <item>This is déjà vu.</item>
+        <item>This is a déjà vu.</item>
         <item>Have we done this before?</item>
         <item>Do you feel like you\'ve experienced this before?</item>
         <item>Here we go, look:</item>
