Fixed some typos.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1779,14 +1779,14 @@
         <item>{[Buen]; plural:+os} {[día]; plural:+s}</item>
         <item>{[Buen]; plural:+os} {[día]; plural:+s}</item>
         <item>{[Buen]; plural:+os} {[día]; plural:+s}</item>
-        <item>{[Buen]; plural:+as} {[tarde]; plural:+s}</item>
-        <item>{[Buen]; plural:+as} {[tarde]; plural:+s}</item>
-        <item>{[Buen]; plural:+as} {[tarde]; plural:+s}</item>
-        <item>{[Buen]; plural:+as} {[tarde]; plural:+s}</item>
-        <item>{[Buen]; plural:+as} {[tarde]; plural:+s}</item>
-        <item>{[Buen]; plural:+as} {[tarde]; plural:+s}</item>
-        <item>{[Buen]; plural:+as} {[tarde]; plural:+s}</item>
-        <item>{[Buen]; plural:+as} {[tarde]; plural:+s}</item>
+        <item>{[Buena]; plural:+s} {[tarde]; plural:+s}</item>
+        <item>{[Buena]; plural:+s} {[tarde]; plural:+s}</item>
+        <item>{[Buena]; plural:+s} {[tarde]; plural:+s}</item>
+        <item>{[Buena]; plural:+s} {[tarde]; plural:+s}</item>
+        <item>{[Buena]; plural:+s} {[tarde]; plural:+s}</item>
+        <item>{[Buena]; plural:+s} {[tarde]; plural:+s}</item>
+        <item>{[Buena]; plural:+s} {[tarde]; plural:+s}</item>
+        <item>{[Buena]; plural:+s} {[tarde]; plural:+s}</item>
         <item>{[Buena]; plural:+s} {[noche]; plural:+s}</item>
         <item>{[Buena]; plural:+s} {[noche]; plural:+s}</item>
         <item>{[Buena]; plural:+s} {[noche]; plural:+s}</item>
